# typst-as-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  weekly-typst-check.yml
.helix/: languages.toml
examples/: async_resolve_packages.rs  auto_packages.rs  font_searcher.rs  hashmap_example.rs  html.rs  resolve_files.rs  resolve_packages.rs  resolve_static.rs  small_example.rs
examples/templates/: font_searcher.typ  function.typ  html.typ  resolve_files.typ  resolve_static.typ  template.typ  template_hashmap.typ  with_packages.typ
src/: cached_file_resolver.rs  conversions.rs  embedded_package_resolver.rs  file_resolver.rs  file_resolvers.rs  font_searcher_options.rs  in_memory_cache.rs  lib.rs  package_resolver.rs  typst_kit_options.rs  util.rs
