[package]
name = "typst-as-lib"
version = "0.15.1"
edition = "2024"
license = "MIT"
description = "Small wrapper for typst that makes it easier to use it as a templating engine"
repository = "https://github.com/Relacibo/typst-as-lib"
readme = "README.md"
keywords = ["template", "typst"]
categories = ["template-engine"]

[features]
packages = ["dep:binstall-tar", "dep:flate2"]
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest", "dep:bytes"]
typst-kit-fonts = ["dep:typst-kit", "typst-kit/fonts"]
typst-kit-embed-fonts = ["typst-kit?/embed-fonts"]
typst-html = []

[dependencies]
binstall-tar = { version = "0.4", optional = true }
chrono = "0.4"
comemo = "0.5"
dirs = "6.0"
ecow = "0.2"
flate2 = { version = "1.1", optional = true }
thiserror = "2.0"
typst = "0.14"
ureq = { version = "3.1", optional = true }
typst-kit = { version = "0.14", default-features = false, optional = true }
reqwest = { version = "0.13", features = ["blocking"], optional = true }
bytes = { version = "1.11", optional = true }

[dev-dependencies]
derive_typst_intoval = "0.6.0"
typst-pdf = "0.14.2"
typst-html = "0.14.2"
typst = "0.14.2"

[[example]]
name = "resolve_packages"
required-features = ["packages"]

[[example]]
name = "font_searcher"
required-features = ["typst-kit-fonts", "typst-kit-embed-fonts"]

[[example]]
name = "html"
required-features = ["typst-html"]
